--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header">
-        <div class="logo">Header Logo</div>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+    <div class="container-top">
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
+        <div class="intro-container">
+            <div class="hero-main">This is a website</div>
+            <div class="hero-text">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
+            <img src="placeholder.jpg" alt="placeholder image">
+        </div>
     </div>
 </body>
 </html>
