Text change and page to be replicated added.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
             </ul>
         </div>
         <div class="intro-container">
-            <div class="hero-main">This is a website</div>
-            <div class="hero-text">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
+            <div class="hero">
+                <div class="hero-main">This website is awesome</div>
+                <div class="hero-text">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
+            </div>
             <img src="placeholder.jpg" alt="placeholder image">
         </div>
     </div>
