Sign-up button created and styled.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="hero">
                 <div class="hero-main">This website is awesome</div>
                 <div class="hero-text">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
+                <button class="sign-up">Sign up</button>
             </div>
             <img src="placeholder.jpg" alt="placeholder image">
         </div>
