Adds header and text for next section.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,27 @@
                 <div class="hero-text">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</div>
                 <button class="sign-up">Sign up</button>
             </div>
-            <img src="placeholder.jpg" alt="placeholder image">
+            <img class="placeholder" src="placeholder.jpg" alt="placeholder image">
+        </div>
+    </div>
+
+    <h1 class="info-header">Some random information.</h1>
+    <div class="information-container">
+        <div class="info">
+            <img src="placeholder.jpg" alt="">
+            <div class="image-info">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <img src="placeholder.jpg" alt="">
+            <div class="image-info">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <img src="placeholder.jpg" alt="">
+            <div class="image-info">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="info">
+            <img src="placeholder.jpg" alt="">
+            <div class="image-info">this is some subtext under an illustration or image</div>
         </div>
     </div>
 </body>
