--- a/index.html
+++ b/index.html
@@ -46,5 +46,12 @@
             <div class="image-info">this is some subtext under an illustration or image</div>
         </div>
     </div>
+    
+    <div class="quote-container">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
+            will actually read it. Who knows? All I know is that is looks nice.
+        </div>
+        <div class="quote-by">-Thor, God of Thunder</div>
+    </div>
 </body>
 </html>
