--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
     </div>
     
     <div class="quote-container">
-        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
-            will actually read it. Who knows? All I know is that is looks nice.
+        <div class="quote">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people
+                will actually read it. Who knows? All I know is that is looks nice.
+            </p>
+            <div class="quote-by">-Thor, God of Thunder</div>
         </div>
-        <div class="quote-by">-Thor, God of Thunder</div>
     </div>
 </body>
 </html>
