HTML for sign up section.

--- a/index.html
+++ b/index.html
@@ -55,5 +55,13 @@
             <div class="quote-by">-Thor, God of Thunder</div>
         </div>
     </div>
+
+    <div class="sign-up-container">
+        <div class="call">
+            <p class="call-title">Call to action! it's time!</p>
+            <p class="call-description">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="call-sign-up">Sign up</button>
+    </div>
 </body>
 </html>
