--- a/index.html
+++ b/index.html
@@ -63,5 +63,7 @@
         </div>
         <button class="call-sign-up">Sign up</button>
     </div>
+
+    <div class="footer">Copyright &copy; The Odin Project 2021</div>
 </body>
 </html>
